[gd_scene load_steps=14 format=2]

[ext_resource path="res://Racers/SinglePlayer_NPC/Materials/M_NPCWindshield.tres" type="Material" id=1]
[ext_resource path="res://Racers/SinglePlayer_NPC/NPC_old.gd" type="Script" id=2]
[ext_resource path="res://Racers/General/Bike/Scripts/GroundDetect.gd" type="Script" id=3]
[ext_resource path="res://Racers/General/Bike/Assets/SFX/DieselEngine.wav" type="AudioStream" id=4]
[ext_resource path="res://Racers/General/Bike/Assets/SFX/JetEngine.wav" type="AudioStream" id=5]
[ext_resource path="res://Levels/TestTerrain/Assets/Materials/GroundWetRocks/Ground_Wet_Rocks_001_basecolor.jpg" type="Texture" id=6]
[ext_resource path="res://Racers/General/Bike/Assets/Models/RacerModel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Racers/SinglePlayer_NPC/Materials/M_NPCBike.tres" type="Material" id=8]
[ext_resource path="res://Racers/General/Bike/Assets/Models/Bike04.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 2.5

[sub_resource type="ParticlesMaterial" id=2]
direction = Vector3( 0, 0, 5 )
spread = 10.0
gravity = Vector3( 0, -2, 0 )
initial_velocity = 8.0
initial_velocity_random = 0.19
angle = 96.0
angle_random = 0.87

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.47451, 0.439216, 0.321569, 0.266667 )
albedo_texture = ExtResource( 6 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )
size = Vector2( 2, 2 )

[node name="NPC" type="KinematicBody"]
collision_mask = 3
script = ExtResource( 2 )

[node name="Engine" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="WindShield" parent="Engine" index="0"]
material/0 = ExtResource( 1 )

[node name="SteeringColumn" parent="Engine" index="1"]
material/0 = ExtResource( 8 )

[node name="Racer" parent="Engine" instance=ExtResource( 7 )]
transform = Transform( -0.02, 0, -1.74846e-09, 0, 0.02, 0, 1.74846e-09, 0, -0.02, 0, -1.116, 0.751 )

[node name="SpotLight_L" type="SpotLight" parent="Engine"]
transform = Transform( 0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, -0.3, 0.0999999, -2.26459 )
visible = false
light_color = Color( 0.635294, 0.913725, 1, 1 )
light_energy = 2.0
spot_range = 30.0
spot_angle = 25.0

[node name="SpotLight_R" type="SpotLight" parent="Engine"]
transform = Transform( 0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, 0.3, 0.0999999, -2.26459 )
visible = false
light_color = Color( 0.635294, 0.913725, 1, 1 )
light_energy = 2.0
spot_range = 30.0
spot_angle = 25.0

[node name="KinematicCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )
shape = SubResource( 1 )

[node name="GroundDetect1" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, -0.75 )
enabled = true
cast_to = Vector3( 0, -2.1, 0 )
collision_mask = 2
script = ExtResource( 3 )

[node name="GroundDetect2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0.75 )
enabled = true
cast_to = Vector3( 0, -2.1, 0 )
collision_mask = 2
script = ExtResource( 3 )

[node name="Audio_Jet" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.887, 0 )
stream = ExtResource( 5 )
unit_db = -6.214
unit_size = 15.0
autoplay = true
bus = "NPC_SFX"
doppler_tracking = 2

[node name="Audio_Diesel" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.887, 0 )
stream = ExtResource( 4 )
unit_size = 15.0
pitch_scale = 2.82
autoplay = true
bus = "NPC_SFX"
doppler_tracking = 2

[node name="GroundParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0227087, 0 )
generate_lightmap = false
amount = 300
lifetime = 2.0
randomness = 0.18
visibility_aabb = AABB( -1.57502, -1.68518, -0.482215, 3.25055, 3.24511, 8.85 )
local_coords = false
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )

[node name="CrashTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VisibilityTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="is_colliding" from="GroundDetect1" to="." method="_is_on_ground"]
[connection signal="is_colliding" from="GroundDetect2" to="." method="_is_on_ground"]
[connection signal="timeout" from="CrashTimer" to="." method="_crash"]
[connection signal="timeout" from="VisibilityTimer" to="." method="_on_VisibilityTimer_timeout"]

[editable path="Engine"]
